# MAI-ALGORITHMS-25

./: README.md  main.c
Pack1/lab1/: CMakeLists.txt  main.c
Pack1/lab1/include/: lab1.h
Pack1/lab1/source/: lab1.c
Pack1/lab2/: CMakeLists.txt  main.c
Pack1/lab2/include/: lab2.h
Pack1/lab2/source/: lab2.c
Pack1/lab3/: CMakeLists.txt  main.c
Pack1/lab3/include/: lab3.h
Pack1/lab3/source/: lab3.c
Pack1/lab5/: CMakeLists.txt  main.c
Pack1/lab5/include/: lab5.h
Pack1/lab5/source/: lab5.c
Pack1/lab6/: CMakeLists.txt  main.c
Pack1/lab6/include/: lab6.h
Pack1/lab6/source/: lab6.c
Pack1/lab7/: CMakeLists.txt  input.txt  main.c  output.txt
Pack1/lab7/include/: lab7.h
Pack1/lab7/source/: lab7.c
Pack1/lab8/: CMakeLists.txt  main.c
Pack1/lab8/include/: lab8.h
Pack1/lab8/source/: lab8.c
Pack2/lab1/: CMakeLists.txt  main.c
Pack2/lab1/include/: lab1.h
Pack2/lab1/source/: lab1.c
Pack2/lab2/: CMakeLists.txt  main.c
Pack2/lab2/include/: lab2.h
Pack2/lab2/source/: lab2.c
Pack2/lab2/tests/: tests.c
lab1/: CMakeLists.txt
lab1/include/: lab1.h
